# gigalog

./: README.md  dune-project  gigalog.opam
app/: dune  gigalog.ml
src/: ast.ml  ast_printer.ml  dependency.ml  dune  eval.ml  expr.ml  facts_lexer.mll  facts_parser.mly  lexer.mll  parser.mly  semantic.ml  subst.ml
test/: dune  test_runner.ml
test/programs/: ancestor_base.dl  ancestor_base.out  ancestor_recursive.dl  ancestor_recursive.out  chain_grandparent.dl  chain_grandparent.out  double_negation.dl  double_negation.out  friends_transitive.dl  friends_transitive.out  mutual_connected.dl  mutual_connected.out  neg_empty.dl  neg_empty.out  neg_failure.dl  neg_failure.out  neg_success.dl  no_match_case.dl  no_match_case.out  not_sibling.dl  not_sibling.out  parent_strings.dl  parent_strings.out  quoted_names.dl  quoted_names.out  self_recursive.dl  self_recursive.out  simple_parent.dl  simple_parent.out  simple_variable.dl  simple_variable.out  test_addition.dl  test_addition.out  test_combined.dl  test_combined.out  test_exponentiation.dl  test_exponentiation.out  test_multiplication.dl  test_multiplication.out  test_negation.dl  (+1 more)
